cambio de estilos

--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,9 @@
     width: 1000%;
     max-width: 800px;
     height: 700px;
-    background: #f3f4f6;
+    background: #f3f4f600;
     border-radius: 12px;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12); */
 }
 
 .model-viewer {
